deploy/skaffold/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  labels:
    app: podinfo
spec:
  type: LoadBalancer
  ports:
    - port: 9898
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: podinfo
